J2EE update; using sub commands instead of operations to let discord handle a lot of the input verification